[workspace]
members = [
    # The application
    "croissant-cli",
    # Core
    "croissant-crossword",
    # Solver SPI
    "croissant-solver",
    # Solver implementations
    "croissant-solver-cadical",
    "croissant-solver-logicng",
    "croissant-solver-splr",
]
resolver = "2"

[profile.release]
lto = true