[package]
name = "croissant-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
croissant-crossword = { path = "../croissant-crossword", version = "0.1.0" }
croissant-solver-logicng = { path = "../croissant-solver-logicng", version = "0.1.0" }
croissant-solver-splr = { path = "../croissant-solver-splr", version = "0.1.0", optional = true }
# Don't pull cadical solver: Cadical relies on C libraries, it does not compile to wasm.
wasm-bindgen = "0.2.99"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"
